--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\cector\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=/Users/huangjiaqi/Library/Application Support/NetBeans/8.2/build.properties
