--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ThreadPool.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-logging-1.1.1.jar=/Users/huangjiaqi/Downloads/commons-logging-1.1.1/commons-logging-1.1.1.jar
+file.reference.log4j-1.2.17.jar=/Users/huangjiaqi/Downloads/apache-log4j-1.2.17/log4j-1.2.17.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
